- [DOC] Reverted rev #304382 and rev #304380, as I figured out a way to   fix the erratic behavior without breaking backwards compatibility. Namely,   $offset retains SEEK_SET behavior but actually SEEK_CUR is passed to   _php_stream_seek, if possible, by moving the offset stream->position bytes. - Addresses bug #53006.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@304384 c90b9560-bf6c-de11-be94-00142212c4b1