ext/standard/tests/streams/bug46426.phpt
@@ -7,23 +7,19 @@ $tmp = tmpfile();
 
 fwrite($tmp, b"12345");
 
-fseek($tmp, 0);
-echo stream_get_contents($tmp, 2, 1); //23
+echo stream_get_contents($tmp, 2, 1);
 echo "\n";
-echo stream_get_contents($tmp, -1); //45
+echo stream_get_contents($tmp, -1);
 echo "\n";
-fseek($tmp, -1, SEEK_CUR);
-echo stream_get_contents($tmp, -1, 0); //5
+echo stream_get_contents($tmp, -1, 0);
 echo "\n";
-fseek($tmp, 0);
-echo stream_get_contents($tmp, -1, 2); //345
+echo stream_get_contents($tmp, -1, 2);
 echo "\n";
-fseek($tmp, 0);
-echo stream_get_contents($tmp, 0, 0); //""
+echo stream_get_contents($tmp, 0, 0);
 echo "\n";
-echo stream_get_contents($tmp, 1, 0); //1
+echo stream_get_contents($tmp, 1, 0);
 echo "\n";
-echo stream_get_contents($tmp, -1); //2345
+echo stream_get_contents($tmp, -1);
 
 @unlink($tmp);
 
@@ -31,7 +27,7 @@ echo stream_get_contents($tmp, -1); //2345
 --EXPECT--
 23
 45
-5
+12345
 345
 
 1
