ext/standard/tests/streams/stream_get_contents_001.phpt
@@ -9,17 +9,14 @@ fwrite($tmp, b"12345");
 
 echo stream_get_contents($tmp, 2, 5), "--\n";
 echo stream_get_contents($tmp, 2), "--\n";
-fseek($tmp, 0);
 echo stream_get_contents($tmp, 2, 3), "--\n";
 echo stream_get_contents($tmp, 2, -1), "--\n";
 
 @unlink($tmp);
 
 ?>
---EXPECTF--
+--EXPECT--
 --
 --
 45--
-
-Warning: stream_get_contents(): Number of bytes to seek must be non-negative, given -1 in %s on line %d
 --
